# screencast-tv

./: .gitignore  CLAUDE.md  README.md  gradlew  settings.gradle.kts  troubleshooting.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: info_response.bplist
app/src/main/cpp/: CMakeLists.txt  airplay_crypto_jni.cpp
app/src/main/java/com/screencast/tv/: BootReceiver.kt  MainActivity.kt  MirrorActivity.kt  PlaybackActivity.kt  PlaybackFragment.kt  SettingsActivity.kt
app/src/main/java/com/screencast/tv/airplay/: AirPlayAudioReceiver.kt  AirPlayPairing.kt  AirPlayServer.kt  AirPlayService.kt  BinaryPlistWriter.kt  PlistParser.kt  RtspServer.kt
app/src/main/java/com/screencast/tv/airplay/mirror/: AirPlayCryptoBridge.kt  AirPlayMirrorDecryptor.kt  AirPlayMirrorRenderer.kt  AirPlayMirrorStreamProcessor.kt
app/src/main/java/com/screencast/tv/common/: AppPrefs.kt  CastEvent.kt  CastEventBus.kt  NetworkUtils.kt
app/src/main/java/com/screencast/tv/dlna/: AVTransportService.kt  DlnaServer.kt  DlnaService.kt  SsdpHandler.kt
app/src/main/java/com/screencast/tv/player/: PlayerCallback.kt  VideoPlayerManager.kt
app/src/main/res/drawable/: banner.xml  ic_launcher.xml
app/src/main/res/layout/: activity_main.xml  activity_mirror.xml  activity_playback.xml  activity_settings.xml
app/src/main/res/values/: strings.xml  styles.xml
